Extract reusable CSS classes for tables styling

--- a/app/views/admin/system_stats/show.html.erb
+++ b/app/views/admin/system_stats/show.html.erb
@@ -74,29 +74,29 @@
 
   <section class="space-y-4">
     <h2 class="ff-h2">Vacuum Stats</h2>
-    <div class="overflow-x-auto rounded-xl border border-slate-200">
-      <table class="w-full text-left text-sm text-slate-700">
-        <thead class="border-b border-slate-200 bg-slate-50 text-xs uppercase text-slate-600">
+    <div class="ff-table-container">
+      <table class="ff-table">
+        <thead>
           <tr>
-            <th scope="col" class="px-6 py-3">Table</th>
-            <th scope="col" class="px-6 py-3 text-right">Live Tuples</th>
-            <th scope="col" class="px-6 py-3 text-right">Dead Tuples</th>
-            <th scope="col" class="px-6 py-3">Last Vacuum</th>
-            <th scope="col" class="px-6 py-3">Last Autovacuum</th>
-            <th scope="col" class="px-6 py-3 text-right">Vacuum Count</th>
-            <th scope="col" class="px-6 py-3 text-right">Autovacuum Count</th>
+            <th scope="col">Table</th>
+            <th scope="col" class="text-right">Live Tuples</th>
+            <th scope="col" class="text-right">Dead Tuples</th>
+            <th scope="col">Last Vacuum</th>
+            <th scope="col">Last Autovacuum</th>
+            <th scope="col" class="text-right">Vacuum Count</th>
+            <th scope="col" class="text-right">Autovacuum Count</th>
           </tr>
         </thead>
-        <tbody class="divide-y divide-slate-200 bg-white">
+        <tbody>
           <% @disk_usage[:vacuum_stats].each do |row| %>
-            <tr class="hover:bg-slate-50">
-              <td class="whitespace-nowrap px-6 py-4 font-mono text-sm"><%= row["relname"] %></td>
-              <td class="px-6 py-4 text-right"><%= number_with_delimiter(row["n_live_tup"]) %></td>
-              <td class="px-6 py-4 text-right"><%= number_with_delimiter(row["n_dead_tup"]) %></td>
-              <td class="px-6 py-4"><%= short_time_ago_tag(row["last_vacuum"]) %></td>
-              <td class="px-6 py-4"><%= short_time_ago_tag(row["last_autovacuum"]) %></td>
-              <td class="px-6 py-4 text-right"><%= row["vacuum_count"] %></td>
-              <td class="px-6 py-4 text-right"><%= row["autovacuum_count"] %></td>
+            <tr>
+              <td class="whitespace-nowrap font-mono text-sm"><%= row["relname"] %></td>
+              <td class="text-right"><%= number_with_delimiter(row["n_live_tup"]) %></td>
+              <td class="text-right"><%= number_with_delimiter(row["n_dead_tup"]) %></td>
+              <td><%= short_time_ago_tag(row["last_vacuum"]) %></td>
+              <td><%= short_time_ago_tag(row["last_autovacuum"]) %></td>
+              <td class="text-right"><%= row["vacuum_count"] %></td>
+              <td class="text-right"><%= row["autovacuum_count"] %></td>
             </tr>
           <% end %>
         </tbody>
