--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -118,4 +118,32 @@
   .ff-h3 {
     @apply text-xl font-semibold mb-2 text-slate-900;
   }
+
+  .ff-table-container {
+    @apply overflow-x-auto rounded-xl border border-slate-200;
+  }
+
+  .ff-table {
+    @apply w-full text-left text-sm text-slate-700;
+  }
+
+  .ff-table thead {
+    @apply border-b border-slate-200 bg-slate-50 text-xs uppercase text-slate-600;
+  }
+
+  .ff-table th {
+    @apply px-6 py-3;
+  }
+
+  .ff-table tbody {
+    @apply divide-y divide-slate-200 bg-white;
+  }
+
+  .ff-table tr {
+    @apply hover:bg-slate-50;
+  }
+
+  .ff-table td {
+    @apply px-6 py-4;
+  }
 }
